--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@clerk/clerk-react": "^5.22.6",
+    "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "antd": "^5.23.2",
+    "aos": "^2.3.4",
     "cra-template": "1.2.0",
     "humanize-duration": "^3.32.1",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
