--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^2.3.4",
     "cra-template": "1.2.0",
     "humanize-duration": "^3.32.1",
+    "motion": "^12.0.6",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
     "react": "^19.0.0",
