--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "rc-progress": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-login-page": "^1.0.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
